--- a/vite-project/src/components/propertyCardList/PropertyCardList.css
+++ b/vite-project/src/components/propertyCardList/PropertyCardList.css
@@ -119,7 +119,10 @@
 .property-card {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  /* justify-content: flex-start; */
+  /* TODO ezhang: use flex start for the card information */
+
   background-color: #ffffff;
   border: 2px solid #000000;
   border-radius: 10px;
